@@ -70,9 +70,6 @@
 //#define MODE_HANDLE_HARD_STOPS				0x30
 #define MODE_CALIB_ABS_AND_INCREMENTAL		0x40
 
-#define MODE_CONTROLLED             1
-#define MODE_CALIB                  2
-
 //   Calibration Type Messages 
 #define CALIB_HARD_STOPS            0 
 #define CALIB_ABS_POS_SENS          1
